Fix scrollbars to hide on page preload

--- a/src/assets/sass/layout/_base.scss
+++ b/src/assets/sass/layout/_base.scss
@@ -5,6 +5,7 @@ html, body {
     // background: $default-background-color;
     height: 100%;
     margin: 0;
+    overflow: hidden; // prevent scrollbars showing with preloader
 }
 
 h1, h2, h3, h4, h5, h6 {
